Removed inactive staff

--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="card">
+            <!-- <div class="card">
                 <div class="content">
                     <div class="imgBx"><img src="./img/about/umeshshinde.jpg"></div>
                     <div class="contentBx">
@@ -134,8 +134,8 @@
                         <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></i></a>
                     </li>
                 </ul>
-            </div>
-            <div class="card">
+            </div> -->
+            <!-- <div class="card">
                 <div class="content">
                     <div class="imgBx"><img src="./img/about/allyouwant.jpg"></div>
                     <div class="contentBx">
@@ -150,8 +150,8 @@
                         <a href="https://youtube.com/channel/UC2RgHPjEILNgRuNYS1BKbbA"><i class="fa fa-youtube" aria-hidden="true"></i></i></a>
                     </li>
                 </ul>
-            </div>
-            <div class="card">
+            </div> -->
+            <!-- <div class="card">
                 <div class="content">
                     <div class="imgBx"><img src="./img/about/sanky.jpg"></div>
                     <div class="contentBx">
@@ -166,8 +166,8 @@
                         <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></i></a>
                     </li>
                 </ul>
-            </div>
-            <div class="card">
+            </div> -->
+            <!-- <div class="card">
                 <div class="content">
                     <div class="imgBx"><img src="./img/about/heremb.jpg"></div>
                     <div class="contentBx">
@@ -182,8 +182,8 @@
                         <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></i></a>
                     </li>
                 </ul>
-            </div>
-            <div class="card">
+            </div> -->
+            <!-- <div class="card">
                 <div class="content">
                     <div class="imgBx"><img src="./img/about/adityamore.jpg"></div>
                     <div class="contentBx">
@@ -198,8 +198,8 @@
                         <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></i></a>
                     </li>
                 </ul>
-            </div>
-            <div class="card">
+            </div> -->
+            <!-- <div class="card">
                 <div class="content">
                     <div class="imgBx"><img src="./img/about/druvpamdani.jpg"></div>
                     <div class="contentBx">
@@ -214,7 +214,7 @@
                         <a href="https://youtube.com/channel/UCKZK9GLCpTasLw4vwN9zKEw"><i class="fa fa-youtube" aria-hidden="true"></i></i></a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </div>
         <ul class="sci">
             <li><a href="https://www.facebook.com/marathivikya/"><img src="./img/facebook.png"></a></li>
