--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                         <a href="https://www.instagram.com/marathivikya/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                     </li>
                     <li style="--i:2">
-                        <a href="https://www.youtube.com/channel/UCEMTc-cC6n2SegWwL2rbXjg"><i class="fa fa-youtube" aria-hidden="true"></i></i></a>
+                        <a href="https://www.youtube.com/@ogvikya"><i class="fa fa-youtube" aria-hidden="true"></i></i></a>
                     </li>
                 </ul>
             </div>
@@ -108,6 +108,22 @@
                     <div class="imgBx"><img src="./img/about/yashnate.jpg"></div>
                     <div class="contentBx">
                         <h3>Yash Nate<br><span>Management</span></h3>
+                    </div>
+                </div>
+                <ul class="sci2">
+                    <li style="--i:1">
+                        <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    </li>
+                    <li style="--i:2">
+                        <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx"><img src="./img/about/yashnate.jpg"></div>
+                    <div class="contentBx">
+                        <h3>Yash Nate<br><span>Supporter</span></h3>
                     </div>
                 </div>
                 <ul class="sci2">
