--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                 <div class="content">
                     <div class="imgBx"><img src="./img/about/yashnate.jpg"></div>
                     <div class="contentBx">
-                        <h3>Yash Nate<br><span>Supporter</span></h3>
+                        <h3>Krushna Mali<br><span>Supporter</span></h3>
                     </div>
                 </div>
                 <ul class="sci2">
