--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
             </div>
             <div class="card">
                 <div class="content">
-                    <div class="imgBx"><img src="./img/about/yashnate.jpg"></div>
+                    <div class="imgBx"><img src="./img/about/mhgamer.jpg"></div>
                     <div class="contentBx">
                         <h3>Krushna Mali<br><span>Supporter</span></h3>
                     </div>
